txrx/static/less/txrx.less
.wmd-panel {margin: 0; }
section { padding-bottom: 25px; }
section.banner { padding-bottom: 35px; }
.comment:target > .comment_outer { background-color: @successBackground; }

.transition(@value) {
  transition: @value;
  -webkit-transition: @value;
}

.floatingBox {
  background: white;
  box-shadow: 1px 1px 4px black;
  padding: 3px;
  position: absolute;
  z-index: 10;
}
.ViewAll {
  float: right;
  padding: 10px 20px;
  text-transform: none;
}

/* txrx overrides */

header, #main {
  padding: 0 15px;
}

.narrow_page {
  margin: 0 auto;
  max-width: 990px;
}

h1.page_title {
  color: @gray-dark;
  border-bottom: 2px solid;
  font-weight: normal;
  line-height: 37px;
  margin-bottom: 15px;
  padding-right: 120px;
  position: relative;
  .calendar_widget {
    position: absolute;
    top: 0;
    right: 0;
    a { color: inherit; }
  }
}

h3.block_title {
  color: @gray-dark;
  font-weight: normal;
  margin: 0 15px 15px;
  text-transform: uppercase;
}

#side {
  h3.block_title {
    border-bottom: 2px solid;
    margin: 0 0 15px;
    padding-top: 10px;
    text-align: right;
  }
}

#flatpage > iframe {
  display: block;
  margin: 0 auto;
  max-width: 100%;
}

#flatpage {
  h3.block_title {
    margin: 0;
  }
  .well {
    > :last-child { margin-bottom: 0; }
  }
}

#memberships {
  text-align: center;
  .membership {
    display: inline-block;
    margin: 0 10px 20px;
    max-width: 100%;
    padding: 15px 20px;
    text-align: left; 
    width: 420px;
    .membership_features {
      height: 180px;
      list-style: none;
      margin: 0;
      padding: 10px 0;
    }
    .membership_features li {
      padding-bottom: 10px;
    }
  }
  .button_box { padding-top: 15px; }
  form { text-align: center; }
  select { width: 250px; max-width: 100%; }
}

@media (max-width: @screen-xs-min) {
  #memberships .membership {
    width: 300px;
    height: auto;
  }
}
form label.required {
  font-weight: bold;
}

#bot_right,#mobileCart {
  border: double 4px;
  bottom: 0px;
  padding: 6px 10px;
  position: fixed;
  z-index: 100;
}
#mobileCart { right: 0; margin: 0;}
#bot_right { background: white; left: 0px; }

/* tools */
#labs {
  height: 375px;
  overflow: hidden;
}

.vertical-gradient(@color1,@color2) {
  background: @color1;
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(@color2), to(@color1));
  background: -webkit-linear-gradient(top, @color1, @color2);
  background: -moz-linear-gradient(top, @color1, @color2);
  background: -ms-linear-gradient(top, @color1, @color2);
  background: -o-linear-gradient(top, @color1, @color2);
}

.lab {
  float: left;
  margin-bottom: 0;
  -webkit-transition: width 0.25s ease-in;
  transition: width 0.25s ease-in;
  width: 50px;
  .carousel-caption { margin-left: 50px; }
  .wrapper {
    position: relative;
    width: 620px;
  }
  label {
    .vertical-gradient(rgba(55,55,55,.75),rgba(0,0,0,.75));
    color: white;
    cursor: pointer;
    height: 51px;
    font-size: 25px;
    left: -380px;
    line-height: 50px;
    position: absolute;
    text-transform: uppercase;
    text-align: center;
    top: -2px;
    -webkit-transform: rotate(-90deg);
    transform: rotate(-90deg);
    -webkit-transform-origin: top right;
    transform-origin: top right;
    width: 380px;
  }
}

[type=radio]:checked + .lab { width: 620px; }
img { max-width: 100%; }

/* blog */
div.highlight { clear: both; }
div.post-content {
  margin: 15px 0 40px;
  width: 100%;
  code { background-color: #eee; }
  iframe { max-width: 100%; }
  .post-image {
    float: left;
    margin: 0 20px 20px 0;
  }
}

.post-tags { font-size: 12px; }

label .help-text {
  display: inline-block;
  font-size: 0.8em;
  margin-left: 25px;
}

#wmd-input {
  height: 300px;
}

/* should be in a classes.css file! */
#show_closed,[for=show_closed] { display: inline-block; margin-bottom: 5px; vertical-align: middle; }
#show_closed { margin-left: 20px; margin-top: 0; }
.week { margin-bottom: 20px; }
.related_classes {
  padding-top: 20px;
  .full { color: red; }
}

.has_notes span {
  border-bottom: dashed 1px;
  color: #0088cc;
  cursor: help;
}

.cartHeaders { display: none; }

.checkout-box {
  text-align: center;
}

.itemContainer {
  padding: 3px;
  position: relative;
  margin-bottom: 5px;
  min-height: 20px;
  overflow: hidden;
  &:nth-child(2n+1) { background-color: rgba(0,0,0,0.05); }
}

.itemName {
  padding-right: 15px;
  font-size: 12px;
  b { font-size: 1.1em; }
}

.itemQuantity, .itemPrice {
  display: inline-block;
  padding-right: 20px;
}
.itemQuantity:before { content: "x"; }
.simpleCart_finalTotal { font-size: 1.1em; font-weight: bold; }

.itemRemove {
  font-size: 0;
  right: 0;
  margin-top: -9px;
  position: absolute;
  top: 50%;
  a {
    display: inline-block;
    width: 11px;
    height: 11px;
    margin-top: 1px;
    line-height: 14px;
    background-image: url("/static/img/icon_x_red.png");
    background-repeat: no-repeat;
  }
}

.course, .course-detail {
  .add { display: inline-block; }
  .drop, &.in-cart .add { display: none; margin: 0 auto; }
  &.in-cart .drop { display: inline-block; }
}

.RsvpLink, .EnrollLink {
  display: block;
  position: relative;
  text-align: center;
}

.recentAdd {
  box-shadow: inset 0 0 5px #3ac2f5, 0 0 5px #3ac2f5;
}

.RsvpLink {
  .is_full,.unrsvp { display: none; }
  &.attending {
    .unrsvp { display: inline-block; }
    .rsvp { display: none; }
  }
}
.full .RsvpLink {
  .rsvp { display: none; }
  .is_full { display: block; }
  .not_full { display: none; }
}

.RsvpLink .message {
  color: black;
  bottom: 0;
  display: none;
  background: white;
  box-shadow: inset 0 0 5px #55F;
  left: 100%;
  padding: 5px 20px 5px 5px;
  position: absolute;
  text-decoration: none;
  width: 300px;
  &:after {
    background: url("/static/img/icon_x_red.png") no-repeat center;
    color: #F33;
    content: "";
    display: block;
    font-size: 1.5em;
    position: absolute;
    height: 10px;
    line-height: 10px;
    margin-top: -5px;
    right: 10px;
    top: 50%;
    width: 10px;
  }
}

.loading .RsvpLink {
  &:before {
    background: url(/static/img/loading.gif) center rgba(150,150,150,0.8) no-repeat;
    content: "";
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
  }
}

/* from the codrspace boot strap */
h1,h2,h3,h4,h5,h6{margin:0;font-family:inherit;font-weight:bold;color:inherit;text-rendering:optimizelegibility;}
h1 small,h2 small,h3 small,h4 small,h5 small,h6 small{font-weight:normal;color:#999999;}
h1{font-size:30px;line-height:36px;}h1 small{font-size:18px;}
h2{font-size:24px;line-height:36px;}h2 small{font-size:18px;}
h3{line-height:27px;font-size:18px;}h3 small{font-size:14px;}
h4,h5,h6{line-height:18px;}
h4{font-size:14px;}
h4 small{font-size:12px;}
h5{font-size:12px;}
h6{font-size:11px;color:#999999;text-transform:uppercase;}

/* events */
.paginator {
  margin-bottom: 10px;
  position: relative;
  text-align: center;
  strong { font-size: 2em; }
  .left, .right {
    position: absolute;
    top: 0;
  }
  .left { left: 0; }
  .right { right: 0; }
}

h3.date {
  text-decoration: underline;
  margin: 15px 0 0;
}

.course-detail {
  .left {
    position: relative;
    .calendar_widget {
      font-size: 18px;
      position: absolute;
      right: 0;
      top: 0;
    }
  }
}

/* comments */
h2.section_title {
  background: @well-bg;
  font-size: 18px;
  padding: 0 10px;
}

#comments {
  h2 { margin: 20px 0 5px; }
  textarea { height: 150px; max-width: 100%; width: 350px; }
}

#mptt-comments-tree {
  min-height: 20px;
}

#mptt-comments-tree .comment {
  .comment:last-child { margin-bottom: 0; }
  &.collapsed {
    height: 20px;
    overflow: hidden;
    .comment {
      display: none;
    }
    .expand-link:before { content: "[+]"; }
  }
  .expand-link:before { content: "[-]"; font-weight: normal; font-family: monospace; }
  a {
    text-decoration: none;
    cursor: pointer;
  }
}

.comment_form .md {
  display: none;
  margin-bottom: 20px;
  &.show { display: block; }
  tr { border: 1px gray solid; border-left: 0; }
  td { border-left: 1px gray solid; }
}

.photorow :target {
  position: relative;
  &:after {
    border: solid 10px;
    border-color: transparent transparent @grayLight;
    bottom: -5px;
    content: "";
    display: block;
    left: 50%;
    margin-left: -15px;
    position: absolute;
  }
}

.photorow .after {
  background-color: @grayLight;
  display: none;
  float: left;
  margin: 5px 0 20px 20px;
  text-align: center;
  width: 940px;
  .link { display: block; margin: 20px; }
}

.center { text-align: center; }

[data-tooltip] {
  position: relative;
  z-index: 10;
  &:hover:after {
    .floatingBox;
    content: attr(data-tooltip);
    display: block;
    bottom: 20px;
    text-align: center;
    width: 160px;
  }
}

[data-reddot] {
  &:before {
    background: red;
    border-radius: 100%;
    color: white;
    content: attr(data-reddot);
    display: inline-block;
    font-family: sans-serif;
    font-size: 12px;
    font-weight: bold;
    height: 16px;
    line-height: 16px;
    margin-left: -1px;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    width: 16px;
  }
}

.evaluation_form .top {
  margin: 0 15px 10px 250px;
  min-height: 10px;
  overflow: hidden;
  text-align: center;
  .l { float: left; }
  .r { float: right; }
  .scale { font-size: 0.8em; display: inline-block; width: 75px; }
}

.evaluation_form {
  ._row { margin-bottom: 10px; }
  ul {
    display: inline-block;
    margin: 0;
    padding: 0 0 0 50px;
    width: 350px;
    label { position: relative; width: 100%; }
    input { position: absolute; left: 50%; margin-left: -10px; top: 100%; width: 20px; }
    &.errorlist {
      color: red;
      font-weight: bold;
      padding-left: 20px;
      width: 250px;
      li { width: auto; }
    }
  }
  li {
    display: inline-block;
    text-align: center;
    width: 19%;
  }
  label {
    display: inline-block;
    width: 200px;
  }
  .required > label { font-weight: bold; &:after { content: "*"; } }
  label, input { margin-bottom: 0; }
  .help_text { font-size: 0.8em; width: 250px; }
  .comments {
    margin-bottom: 30px;
    input { margin-left: -100px; width: 500px; }
  }
}

.evaluation_form [class^=id_question] {
  label { margin-bottom: 10px; width: 100%; }
  textarea { height: 75px; width: 100%; }
}

p.error { color: red; } /* currently only used on login form */
ul.errorlist { color: red; }

.btn.disabled { color: @gray-light; }

.pagination { display: inline-block; }

